Fixed the video playback issue

--- a/index.html
+++ b/index.html
@@ -190,10 +190,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="></script>
+  <script src="lollipop.js"></script>
   <script src="bideo.js"></script>
   <script src="main.js"></script>
-
 
 </body>
 
