--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Housing Prices vs AirBnb Listings</title>
+  <title>Housing Values in San Diego County</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -20,7 +20,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Housing Prices vs AirBnb Listings</h1>
+        <h1>Housing Values in San Diego County 2004-2020</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
@@ -37,6 +37,12 @@
         <div id="lollipop"></div>
       </div>
     </div>
+    <nav class="navbar fixed-bottom">
+      <div class="navbar-nav navbar-right">
+        <img src="/Resources/sandiegocounty.PNG" id = "countyimg" alt="San Diego County Map" class = "responsive">
+      </div>
+  </nav>
+</div>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin=""/>
