--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Housing Values in San Diego County</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  
 </head>
 
 <body>
@@ -36,6 +37,9 @@
       <div class="col-md-5">
         <div id="lollipop"></div>
       </div>
+      <div class="col-md-5">
+        <div id="map"></div>
+      </div>
     </div>
     <nav class="navbar fixed-bottom">
       <div class="navbar-nav navbar-right">
@@ -52,12 +56,17 @@
 
 
 
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://d3js.org/d3.v4.js"></script>
   <script src="lollipop.js"></script>
+  <script src="config.js"></script>
+  <script src="choropleth.js"></script>
+  <script src="choroplethlogic.js"></script>
   <script src="bideo.js"></script>
   <script src="main.js"></script>
+  
 
 </body>
 
