--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="col-md-5">
         <div id="scatter"></div>
       </div>
-      <div class="col-md-5">
+      <!-- <div class="col-md-5">
         <div id="lollipop"></div>
-      </div>
+      </div> -->
       <div class="col-md-5">
         <div id="map"></div>
       </div>
